<resources>
    <string name="app_name">TaskMaster</string>
    <string name="login_title">TaskMaster</string>
    <string name="login_identifier_label">Correo o teléfono</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_register_button">Registrarse</string>
    <string name="login_progress_description">Validando credenciales</string>

    <string name="register_title">Crear perfil local</string>
    <string name="register_name_label">Nombre</string>
    <string name="register_last_name_label">Apellidos</string>
    <string name="register_gender_label">Género</string>
    <string name="register_email_label">Correo electrónico</string>
    <string name="register_phone_label">Teléfono móvil</string>
    <string name="register_phone_prefix">+56</string>
    <string name="register_password_label">Contraseña</string>
    <string name="register_button">Registrar</string>

    <string name="main_title">TaskMaster</string>
    <string name="main_start_button">Comenzar</string>

    <string name="task_form_title">Nueva tarea</string>
    <string name="task_form_help">Completa los datos y pulsa Agregar tarea.</string>
    <string name="task_name_label">Nombre de la tarea</string>
    <string name="task_name_hint">Ej. Comprar materiales</string>
    <string name="task_category_label">Categoría</string>
    <string name="task_priority_label">Prioridad</string>
    <string name="task_priority_high">Alta</string>
    <string name="task_priority_medium">Media</string>
    <string name="task_priority_low">Baja</string>
    <string name="task_difficulty_label">Dificultad</string>
    <string name="task_completed_checkbox">Completada</string>
    <string name="task_add_button">Agregar tarea</string>
    <string name="task_summary_title">Resumen</string>
    <string name="task_summary_total">Total</string>
    <string name="task_summary_completed">Completadas</string>
    <string name="task_summary_pending">Pendientes</string>
    <string name="task_initial_count">0</string>
    <string name="task_progress_label">Progreso de tareas completadas</string>
    <string name="task_list_title">Tareas</string>
</resources>
